--- a/spark101.ipynb
+++ b/spark101.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -540,33 +540,27 @@
      "output_type": "stream",
      "text": [
       "+-----+-------------------+\n",
-      "|month|     total_rainfall|\n",
+      "|month|       avg_rainfall|\n",
       "+-----+-------------------+\n",
-      "|    1| 3.7580645161290316|\n",
-      "|    2|  3.734513274336283|\n",
-      "|    3|  4.888709677419355|\n",
-      "|    4|  3.128333333333333|\n",
-      "|    5| 1.6733870967741935|\n",
-      "|    6| 1.1075000000000002|\n",
-      "|    7|0.38870967741935486|\n",
-      "|    8| 1.3201612903225806|\n",
-      "|    9| 1.9624999999999997|\n",
-      "|   10|  4.059677419354839|\n",
       "|   11|  5.354166666666667|\n",
       "|   12|  5.021774193548389|\n",
+      "|    3|  4.888709677419355|\n",
+      "|   10|  4.059677419354839|\n",
+      "|    1| 3.7580645161290316|\n",
+      "|    2|  3.734513274336283|\n",
+      "|    4|  3.128333333333333|\n",
+      "|    9| 1.9624999999999997|\n",
+      "|    5| 1.6733870967741935|\n",
+      "|    8| 1.3201612903225806|\n",
+      "|    6| 1.1075000000000002|\n",
+      "|    7|0.38870967741935486|\n",
       "+-----+-------------------+\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "(\n",
-    "weather.withColumn(\"month\", month(\"date\"))\n",
-    ".groupBy(\"month\")\n",
-    ".agg(mean(\"precipitation\").alias(\"total_rainfall\"))\n",
-    ".sort(\"month\")\n",
-    ".show()\n",
-    ")"
+    "weather.withColumn(\"month\", month(\"date\")).groupBy(\"month\").agg(mean(\"precipitation\").alias(\"avg_rainfall\")).sort(desc(\"avg_rainfall\")).show()"
    ]
   },
   {
@@ -578,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -647,62 +641,121 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 49,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DataFrame[date: string, precipitation: double, wind: double, weather: string, temp_avg: double]"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "weather.filter(month('date') == 'January')"
+    "* What is the average high and low temperature on sunny days in July in 2013 and 2014?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import concat, sum, avg, min, max, count, mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-----+------------------------------+\n",
-      "|month|no_of_days_with_freezing_temps|\n",
-      "+-----+------------------------------+\n",
-      "|    1|                             3|\n",
-      "|    2|                             0|\n",
-      "|    3|                             0|\n",
-      "|    4|                             0|\n",
-      "|    5|                             0|\n",
-      "|    6|                             0|\n",
-      "|    7|                             0|\n",
-      "|    8|                             0|\n",
-      "|    9|                             0|\n",
-      "|   10|                             0|\n",
-      "|   11|                             0|\n",
-      "|   12|                             5|\n",
-      "+-----+------------------------------+\n",
+      "+------------------+-----------------+\n",
+      "| average_high_temp| average_low_temp|\n",
+      "+------------------+-----------------+\n",
+      "|26.828846153846158|14.18269230769231|\n",
+      "+------------------+-----------------+\n",
       "\n"
      ]
     }
    ],
    "source": [
     "(\n",
-    "weather.filter(year(\"date\") == 2013)\n",
-    ".withColumn(\"freezing_temps\", (weather.temp_avg <= 0).cast(\"int\"))\n",
-    ".withColumn(\"month\", month(\"date\"))\n",
-    ".groupBy(\"month\")\n",
-    ".agg(sum(\"freezing_temps\").alias(\"no_of_days_with_freezing_temps\"))\n",
-    ".sort(\"month\")\n",
+    "weather.filter(month('date')==7)\n",
+    ".filter(year('date')>2012)\n",
+    ".filter(year('date')<2015)\n",
+    ".filter(col('weather')==lit('sun'))\n",
+    ".agg(avg(\"temp_max\").alias(\"average_high_temp\"), avg(\"temp_min\").alias(\"average_low_temp\"))\n",
+    ".show()\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* What percentage of days were rainy in q3 of 2015?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+\n",
+      "|          avg(rainy)|\n",
+      "+--------------------+\n",
+      "|0.021739130434782608|\n",
+      "+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "(\n",
+    "weather.filter(year('date')==2015)\n",
+    ".filter(month('date')>6)\n",
+    ".filter(month('date')<10)\n",
+    ".select(when(col(\"weather\") == \"rain\", 1).otherwise(0).alias('rainy'))\n",
+    ".agg(mean(\"rainy\"))\n",
+    ".show()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* For each year, find what percentage of days it rained (had non-zero precipitation)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------------------+\n",
+      "|year|          avg(prec)|\n",
+      "+----+-------------------+\n",
+      "|2012|0.48360655737704916|\n",
+      "|2013|0.41643835616438357|\n",
+      "|2014|  0.410958904109589|\n",
+      "|2015|0.39452054794520547|\n",
+      "+----+-------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "(\n",
+    "weather.withColumn('year', year('date'))\n",
+    ".select(when(col(\"precipitation\") > 0, 1).otherwise(0).alias('prec'), 'year')\n",
+    ".groupby('year')\n",
+    ".agg(mean('prec'))\n",
+    ".sort(desc(col('avg(prec)')))\n",
     ".show()\n",
     ")"
    ]
